test/spec_vectors/simd_i16x8_extadd_pairwise_i8x16/fail/module_1.wat
(module (func (result v128) (i16x8.extadd_pairwise_i8x16_s (i32.const 0))))